# rae

./: BUILD_MACOS.md  CROSS_PLATFORM_IMPLEMENTATION.md  build-and-sign.sh  package-lock.json  package.json  sign-app.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: magic-dot-capability.json
src-tauri/src/: audio_client.rs  main.rs  platform.rs  platform_macos.rs  platform_macos_screenshot.rs  utils.rs
src-tauri/src/functions/: app.rs  chat.rs  general.rs  general.rs.bak  mod.rs  overlay.rs
src-tauri/src/services/: auto_start.rs  mod.rs  screenshot_service.rs  text_injection.rs  window_capture.rs
src/api/: auth.ts  chat.ts  fetch.ts  notes.ts  updates.ts
src/components/app/: Sidebar.tsx  Titlebar.tsx  UpdateButton.tsx
src/components/app/ui/dropdown/: CustomDropdown.tsx  Option.tsx  index.tsx
src/components/misc/: ChatHistoryTab.tsx  CodeBlock.tsx  MarkdownRenderer.tsx
src/components/ui/: Button.tsx
src/constants/: animations.ts  shortcuts.ts
src/routes/: MainApp.tsx
src/routes/app/chat/: page.tsx
src/routes/app/chat/components/: Chat.tsx  ChatBox.tsx  ChatInput.tsx
src/routes/app/landing/: page.tsx
src/routes/app/onboarding/: page.tsx
src/routes/app/onboarding/steps/: Authentication.tsx  Onboard.tsx  SettingUp.tsx  UserDetails.tsx  Welcome.tsx
src/routes/overlay/: Overlay.tsx
src/routes/overlay/components/: ChatCard.tsx  CustomDropdown.tsx  Option.tsx  OverlayCard.tsx  OverlayComponents.tsx  OverlayLauncher.ts  OverlayMaximized.tsx  RaeWatcher.tsx  WebSearchAnimation.tsx  chatView.tsx
src/routes/overlay/utils/: inject.ts  media.ts  messages.ts  ui.ts
src/routes/settings/: SettingsSidebar.tsx
src/routes/settings/preferences/: page.tsx
src/routes/settings/shortcuts/: page.tsx
src/store/: chatStore.ts
src/utils/: textExtraction.ts  updateUtils.ts  windowUtils.ts
