[package]
name = "rae"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "rae_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ✅ only keep `tray-icon` feature, remove `menu` (it doesn't exist in Tauri v2)
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }

tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2.3.1"
tauri-plugin-autostart = "2" #for starting the app

serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png"] }
base64 = "0.21"
fastrand = "2.0"
engine = "0.0.0"
window-vibrancy = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
futures-util = "0.3.31"
cpal = "0.16.0"
once_cell = "1.19"

# macOS-specific crates
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-foundation = "0.9"
core-graphics = "0.24"
objc = "0.2"
objc-foundation = "0.1"
accessibility = "0.2"
accessibility-sys = "0.2"
xcap = "0.0.10"
